force-app/main/default/objects/Default_Sales_Lead_Team__c/Default_Sales_Lead_Team__c.object-meta.xml
<CustomObject>
    <label>Default Sales Lead Team</label>
    <nameField>
        <label>Default Sales Lead Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default Sales Lead Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>