force-app/main/default/objects/Default_Sales_Lead_Team__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Default_Sales_Lead_Team</relationshipName>
    <type>Lookup</type>
</CustomField>